--- a/myweb/index.html
+++ b/myweb/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Module two project</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="module2Styles/mystyles.css">
 </head>
 <body>
 <h1>What is Git </h1>
