--- a/myweb/index.html
+++ b/myweb/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <h1>What is Git </h1>
+<div>
 <p id="about">
-	About Version Control
+	<h2>About Version Control</h2>
 What is “version control”, and why should you care? Version control is a system that records
 changes to a file or set of files over time so that you can recall specific versions later. For the
 examples in this book, you will use software source code as the files being version controlled,
@@ -21,6 +22,7 @@ you screw things up or lose files, you can easily recover. In addition, you get 
 overhead.
 </p>
 <p id="localVersion">
+	<h2>Local Version </h2>
 	Many people’s version-control method of choice is to copy files into another directory (perhaps a
 time-stamped directory, if they’re clever). This approach is very common because it is so simple, but
 it is also incredibly error prone. It is easy to forget which directory you’re in and accidentally write
@@ -30,6 +32,7 @@ kept all the changes to files under revision control.
 
 </p>
 <p id="centralized">
+	<h2>Centralized Version</h2>
 	The next major issue that people encounter is that they need to collaborate with developers on
 other systems. To deal with this problem, Centralized Version Control Systems (CVCSs) were
 developed. These systems (such as CVS, Subversion, and Perforce) have a single server that contains
@@ -37,5 +40,6 @@ all the versioned files, and a number of clients that check out files from that 
 many years, this has been the standard for version control.
 10
 </p>
+</div>
 </body>
 </html>
