--- a/myweb/index.html
+++ b/myweb/index.html
@@ -7,8 +7,8 @@
 <body>
 <h1>What is Git </h1>
 <div>
-<p id="about">
-	<h2>About Version Control</h2>
+
+<p id="about">	
 What is “version control”, and why should you care? Version control is a system that records
 changes to a file or set of files over time so that you can recall specific versions later. For the
 examples in this book, you will use software source code as the files being version controlled,
@@ -21,24 +21,35 @@ a problem, who introduced an issue and when, and more. Using a VCS also generall
 you screw things up or lose files, you can easily recover. In addition, you get all this for very little
 overhead.
 </p>
+
 <p id="localVersion">
-	<h2>Local Version </h2>
-	Many people’s version-control method of choice is to copy files into another directory (perhaps a
+		Many people’s version-control method of choice is to copy files into another directory (perhaps a
 time-stamped directory, if they’re clever). This approach is very common because it is so simple, but
 it is also incredibly error prone. It is easy to forget which directory you’re in and accidentally write
 to the wrong file or copy over files you don’t mean to.
 To deal with this issue, programmers long ago developed local VCSs that had a simple database that
 kept all the changes to files under revision control.
+When you do actions in Git, nearly all of them only add data to the Git database. It is hard to get the
+system to do anything that is not undoable or to make it erase data in any way.
+can lose or mess up changes you haven’t committed yet, but after you commit a snapshot into Git, it
+is very difficult to lose, especially if you regularly push your database to another repository.
+This makes using Git a joy because we know we can experiment without the danger of severely
+screwing things up
 
 </p>
-<p id="centralized">
-	<h2>Centralized Version</h2>
+
+<p id="Centralized">	
 	The next major issue that people encounter is that they need to collaborate with developers on
 other systems. To deal with this problem, Centralized Version Control Systems (CVCSs) were
 developed. These systems (such as CVS, Subversion, and Perforce) have a single server that contains
 all the versioned files, and a number of clients that check out files from that central place. For
-many years, this has been the standard for version control.
-10
+many years, this has been the standard for version control.As with any VCS, you
+can lose or mess up changes you haven’t committed yet, but after you commit a snapshot into Git, it
+is very difficult to lose, especially if you regularly push your database to another repository
+10.The staging area is a file, generally contained in your Git directory, that stores information about
+what will go into your next commit. Its technical name in Git parlance is the “index”, but the phrase
+“staging area” works just as well.
+The Git directory is where Git stores the metadata and object database for your project
 </p>
 </div>
 </body>
