--- a/myweb/index.html
+++ b/myweb/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <h1>What is Git </h1>
-<div>
-
-<p id="about">	
+<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+	<div>
+	<p class="abt">About Git</p>
+<p class="aboutgit">	
 What is “version control”, and why should you care? Version control is a system that records
 changes to a file or set of files over time so that you can recall specific versions later. For the
 examples in this book, you will use software source code as the files being version controlled,
@@ -21,9 +22,13 @@ a problem, who introduced an issue and when, and more. Using a VCS also generall
 you screw things up or lose files, you can easily recover. In addition, you get all this for very little
 overhead.
 </p>
-
-<p id="localVersion">
-		Many people’s version-control method of choice is to copy files into another directory (perhaps a
+</div>
+</section>
+<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+	<div>
+	<p class="local">Local version</p>
+	<p class="aboutgit">
+	Many people’s version-control method of choice is to copy files into another directory (perhaps a
 time-stamped directory, if they’re clever). This approach is very common because it is so simple, but
 it is also incredibly error prone. It is easy to forget which directory you’re in and accidentally write
 to the wrong file or copy over files you don’t mean to.
@@ -35,10 +40,13 @@ can lose or mess up changes you haven’t committed yet, but after you commit a 
 is very difficult to lose, especially if you regularly push your database to another repository.
 This makes using Git a joy because we know we can experiment without the danger of severely
 screwing things up
-
 </p>
-
-<p id="Centralized">	
+</div>
+</section>
+<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+	<div>
+	<p class="central">Centralized</p>
+	<p class="aboutgit">
 	The next major issue that people encounter is that they need to collaborate with developers on
 other systems. To deal with this problem, Centralized Version Control Systems (CVCSs) were
 developed. These systems (such as CVS, Subversion, and Perforce) have a single server that contains
@@ -49,8 +57,9 @@ is very difficult to lose, especially if you regularly push your database to ano
 10.The staging area is a file, generally contained in your Git directory, that stores information about
 what will go into your next commit. Its technical name in Git parlance is the “index”, but the phrase
 “staging area” works just as well.
-The Git directory is where Git stores the metadata and object database for your project
-</p>
+The Git directory is where Git stores the metadata and object
+</p>p>
 </div>
+</section>
 </body>
 </html>
