modified copy for submission

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -8,7 +8,7 @@
 <h1>What is Git </h1>
 <section class="column-lg-4 colmn-md-6 colmn-sm-12">
 	<div>
-	<p class="abt">About Git</p>
+	<p class="abt">About Git?</p>
 <p class="aboutgit">	
 What is “version control”, and why should you care? Version control is a system that records
 changes to a file or set of files over time so that you can recall specific versions later. For the
